test/interp/spec/address.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/address.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/address.wast:34:63: offset must be less than or equal to 0xffffffff
...memory 1) (func $bad1 (param $i i32) (i32.load offset=4294967296 (get_loca...
                                        ^
called import spectest.print(i32:97) => void
called import spectest.print(i32:98) => void
called import spectest.print(i32:99) => void
called import spectest.print(i32:122) => void
called import spectest.print(i32:25185) => void
called import spectest.print(i32:25185) => void
called import spectest.print(i32:25442) => void
called import spectest.print(i32:25699) => void
called import spectest.print(i32:122) => void
called import spectest.print(i32:1684234849) => void
called import spectest.print(i32:1701077858) => void
called import spectest.print(i32:1717920867) => void
called import spectest.print(i32:122) => void
$invoke_0() => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
$invoke_1() => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
called import spectest.print(i32:0) => void
3/3 tests passed.
;;; STDOUT ;;)
